--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ DB_PASSWORD=secret
 # AUTH
 JWT_SECRET=7DS7bh9461vG1zf5M2fMMyp1ontGA4dL
 JWT_TTL=3600
+
+# AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+AWS_BUCKET=
+AWS_ASSET_URL=
